# wisp-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  test_sub_manager
.github/workflows/: ci.yml
components/: libnostr-c  noscrypt
components/secp256k1-frost/: CMakeLists.txt  esp_random_adapter.c  idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  broadcaster.c  broadcaster.h  deletion.c  deletion.h  flash_monitor.c  flash_monitor.h  handlers_stub.c  idf_component.yml  main.c  nip11.c  nip11.h  rate_limiter.c  rate_limiter.h  relay_core.h  router.c  router.h  storage_engine.c  storage_engine.h  sub_manager.c  sub_manager.h  validator.c  validator.h  ws_server.c  ws_server.h
test/hardware/: integration_test.sh  stress_test.sh  test_common.py  test_connections.py  test_deletion.py  test_protocol.py  test_relay.py  test_validation.py
test/native/: CMakeLists.txt  test_broadcaster.c  test_filter.c  test_fixtures.h  test_rate_limit.c  test_router.c  test_storage.c  test_sub_manager.c  test_validator.c
